--- a/erp_front-end/src/style.css
+++ b/erp_front-end/src/style.css
@@ -1,3 +1,5 @@
+/*for rgba values. refered website : https://www.w3schools.com/colors/colors_picker.asp*/
+
 html, body {
     background-color: #333
 }
